<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_data_layout"
    tools:context=".Fillbiodata">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                style="@android:style/Widget.TextView.PopupMenu"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@android:color/holo_red_light"
                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/bio_data"
                android:textAlignment="gravity"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/add_image"
                android:layout_width="150dp"
                android:layout_height="138dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_baseline_image_search_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/personal_data"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/view_add_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/view_add_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/view_add_religion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Name"
                android:ems="10"
                android:hint="@string/religion"

                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Name"
                android:ems="10"
                android:hint="@string/language"

                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="BirthDate"
                android:inputType="date"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_birthplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/birthplace"

                android:inputType="time"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="textPersonName"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/occupation"
                android:inputType="textPersonName"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/education"

                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/others"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:fontFamily="@font/montserrat_alternates"
                android:paddingTop="10dp"
                android:text="@string/family_background"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/view_add_father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"

                android:hint="@string/father_name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_father_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"

                android:hint="@string/father_occupation"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_no"

                android:inputType="phone"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_mother_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mother_name"
                android:inputType="textPersonName"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_no_of_sister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/number_of_sister"
                android:inputType="textPersonName"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/view_add_full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/full_address"
                android:inputType="textPersonName"
                android:textSize="14sp" />

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_margin="10dp"
                 android:weightSum="3">
            <ProgressBar
                android:id="@+id/progressBar_id"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:background="@color/colorPrimary"

                android:layout_weight="2"
                android:text="@string/next"
                android:textColor="@color/customwhite" />
             </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>